@@ -26,7 +26,6 @@ import org.springframework.beans.factory.config.ConfigurableBeanFactory;
 import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -97,8 +96,7 @@ public abstract class CommonUsageController extends CommonController<ICommonUsag
 
     @Override
     public List<String> getScenariosNamesAssociatedWithUsageBatch(String batchId) {
-        return ObjectUtils.defaultIfNull(scenarioService.getScenariosNamesByUsageBatchId(batchId),
-            Collections.emptyList());
+        return ObjectUtils.defaultIfNull(scenarioService.getScenariosNamesByUsageBatchId(batchId), List.of());
     }
 
     @Override
