@@ -25,7 +25,6 @@ import org.junit.Before;
 import org.junit.Test;
 import org.powermock.reflect.Whitebox;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -60,7 +59,7 @@ public class SalAuditFilterControllerTest {
 
     @Test
     public void testLoadBeans() {
-        List<Rightsholder> rightsholders = Collections.emptyList();
+        List<Rightsholder> rightsholders = List.of();
         Capture<Pageable> pageableCapture = newCapture();
         expect(rightsholderService.getAllWithSearch(eq(SEARCH_VALUE), capture(pageableCapture), isNull()))
             .andReturn(rightsholders).once();
@@ -90,7 +89,7 @@ public class SalAuditFilterControllerTest {
     @Test
     public void testGetUsageBatches() {
         expect(productFamilyProvider.getSelectedProductFamily()).andReturn(SAL_PRODUCT_FAMILY).once();
-        List<UsageBatch> usageBatches = Collections.emptyList();
+        List<UsageBatch> usageBatches = List.of();
         expect(usageBatchService.getUsageBatches(SAL_PRODUCT_FAMILY)).andReturn(usageBatches).once();
         replay(usageBatchService, productFamilyProvider);
         assertSame(usageBatches, controller.getUsageBatches());
