@@ -31,7 +31,6 @@ import org.powermock.reflect.Whitebox;
 import java.io.OutputStream;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -63,7 +62,7 @@ public class NtsServiceFeeTrueUpReportControllerTest {
 
     @Test
     public void testGetScenarios() {
-        List<Scenario> scenarios = Collections.emptyList();
+        List<Scenario> scenarios = List.of();
         expect(scenarioService.getScenariosByProductFamiliesAndStatuses(
             Set.of("NTS"), Set.of(ScenarioStatusEnum.SENT_TO_LM))).andReturn(scenarios).once();
         replay(scenarioService);
