@@ -106,10 +106,8 @@ public class ViewAaclUsageBatchWindowTest {
         Whitebox.setInternalState(viewaAaclUsageBatchWindow, "grid", grid);
         Button.ClickListener listener = getDeleteButtonClickListener();
         expect(grid.getSelectedItems()).andReturn(Set.of(buildUsageBatch())).once();
-        expect(controller.getAdditionalFundNamesByUsageBatchId(USAGE_BATCH_ID))
-            .andReturn(Collections.emptyList()).once();
-        expect(controller.getScenariosNamesAssociatedWithUsageBatch(USAGE_BATCH_ID))
-            .andReturn(Collections.emptyList()).once();
+        expect(controller.getAdditionalFundNamesByUsageBatchId(USAGE_BATCH_ID)).andReturn(List.of()).once();
+        expect(controller.getScenariosNamesAssociatedWithUsageBatch(USAGE_BATCH_ID)).andReturn(List.of()).once();
         expect(controller.isBatchProcessingCompleted(USAGE_BATCH_ID)).andReturn(true).once();
         expect(Windows.showConfirmDialog(eq("Are you sure you want to delete <i><b>'AACL batch'</b></i> usage batch?"),
             anyObject())).andReturn(confirmWindowCapture).once();
@@ -127,10 +125,8 @@ public class ViewAaclUsageBatchWindowTest {
         Whitebox.setInternalState(viewaAaclUsageBatchWindow, "grid", grid);
         Button.ClickListener listener = getDeleteButtonClickListener();
         expect(grid.getSelectedItems()).andReturn(Set.of(buildUsageBatch())).once();
-        expect(controller.getAdditionalFundNamesByUsageBatchId(USAGE_BATCH_ID))
-            .andReturn(Collections.emptyList()).once();
-        expect(controller.getScenariosNamesAssociatedWithUsageBatch(USAGE_BATCH_ID))
-            .andReturn(Collections.emptyList()).once();
+        expect(controller.getAdditionalFundNamesByUsageBatchId(USAGE_BATCH_ID)).andReturn(List.of()).once();
+        expect(controller.getScenariosNamesAssociatedWithUsageBatch(USAGE_BATCH_ID)).andReturn(List.of()).once();
         expect(controller.isBatchProcessingCompleted(USAGE_BATCH_ID)).andReturn(false).once();
         Windows.showNotificationWindow("'AACL batch' batch cannot be deleted because processing is not completed yet");
         expectLastCall().once();
@@ -147,8 +143,7 @@ public class ViewAaclUsageBatchWindowTest {
         Whitebox.setInternalState(viewaAaclUsageBatchWindow, "grid", grid);
         Button.ClickListener listener = getDeleteButtonClickListener();
         expect(grid.getSelectedItems()).andReturn(Set.of(buildUsageBatch())).once();
-        expect(controller.getAdditionalFundNamesByUsageBatchId(USAGE_BATCH_ID))
-            .andReturn(Collections.emptyList()).once();
+        expect(controller.getAdditionalFundNamesByUsageBatchId(USAGE_BATCH_ID)).andReturn(List.of()).once();
         expect(controller.getScenariosNamesAssociatedWithUsageBatch(USAGE_BATCH_ID))
             .andReturn(Arrays.asList("Scenario 1", "Scenario 2")).once();
         Windows.showNotificationWindow("Usage batch cannot be deleted because it is associated with the following " +
